Exclude layers have no effect if mask layers are set (for the same layers) #35733

Closed
opened 2013-06-13 12:23:29 +02:00 by Wolter van der Velde · 3 comments

%%%--- Operating System, Graphics card ---

- Blender version with error, and version that worked ---


- Short description of error ---

If you have a render layer for which you want to, both exclude and mask another layer, the excluding has no effect.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

See attached blend file. Slot 1 is without masking and slot 2 is with masking

I have two object with their own lamps that shouldn't affect the other object. I have put them in different render layers and excluded them from each other.
One object is around the other one, so they should also be masked from each other to be able to composite them together. But when you mask it, the lamp of the excluded (and masked) layer has influence again on the render layer.

I can work around it by putting the lamps in separate layers, but the point is that i see no reason why exclude shouldn't work with masking. So i think it might be a bug.
%%%

%%%--- Operating System, Graphics card --- - Blender version with error, and version that worked --- - Short description of error --- If you have a render layer for which you want to, both exclude and mask another layer, the excluding has no effect. - Steps for others to reproduce the error (preferably based on attached .blend file) --- See attached blend file. Slot 1 is without masking and slot 2 is with masking I have two object with their own lamps that shouldn't affect the other object. I have put them in different render layers and excluded them from each other. One object is around the other one, so they should also be masked from each other to be able to composite them together. But when you mask it, the lamp of the excluded (and masked) layer has influence again on the render layer. I can work around it by putting the lamps in separate layers, but the point is that i see no reason why exclude shouldn't work with masking. So i think it might be a bug. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35733
No description provided.