Fix #35733: lamps on render layers that are both excluded and used for masking should not be used, same as emissive meshes.